include_HEADERS += \
    ccmain/thresholder.h \
    ccmain/ltrresultiterator.h \
    ccmain/pageiterator.h \
    ccmain/resultiterator.h \
    ccmain/osdetect.h

libtesseract_la_SOURCES += \
    ccmain/control.h \
    ccmain/docqual.h \
    ccmain/equationdetect.h \
    ccmain/fixspace.h \
    ccmain/mutableiterator.h \
    ccmain/output.h \
    ccmain/paragraphs.h \
    ccmain/paragraphs_internal.h \
    ccmain/paramsd.h \
    ccmain/pgedit.h \
    ccmain/reject.h \
    ccmain/tessbox.h \
    ccmain/tessedit.h \
    ccmain/tesseractclass.h \
    ccmain/tessvars.h \
    ccmain/werdit.h

libtesseract_la_SOURCES += \
    ccmain/adaptions.cpp \
    ccmain/applybox.cpp \
    ccmain/control.cpp  \
    ccmain/docqual.cpp \
    ccmain/equationdetect.cpp \
    ccmain/fixspace.cpp \
    ccmain/fixxht.cpp \
    ccmain/linerec.cpp \
    ccmain/ltrresultiterator.cpp \
    ccmain/osdetect.cpp \
    ccmain/output.cpp \
    ccmain/pageiterator.cpp \
    ccmain/pagesegmain.cpp \
    ccmain/pagewalk.cpp \
    ccmain/par_control.cpp \
    ccmain/paragraphs.cpp \
    ccmain/paramsd.cpp \
    ccmain/pgedit.cpp \
    ccmain/recogtraining.cpp \
    ccmain/reject.cpp \
    ccmain/resultiterator.cpp \
    ccmain/superscript.cpp \
    ccmain/tessbox.cpp \
    ccmain/tessedit.cpp \
    ccmain/tesseractclass.cpp \
    ccmain/tessvars.cpp \
    ccmain/tfacepp.cpp \
    ccmain/thresholder.cpp \
    ccmain/werdit.cpp

