libtesseract_la_SOURCES += \
    cutil/bitvec.h \
    cutil/callcpp.h \
    cutil/const.h \
    cutil/cutil.h \
    cutil/cutil_class.h \
    cutil/danerror.h \
    cutil/efio.h \
    cutil/emalloc.h \
    cutil/globals.h \
    cutil/oldlist.h \
    cutil/structures.h

libtesseract_la_SOURCES += \
    cutil/bitvec.cpp \
    cutil/callcpp.cpp \
    cutil/cutil.cpp \
    cutil/cutil_class.cpp \
    cutil/danerror.cpp \
    cutil/efio.cpp \
    cutil/emalloc.cpp \
    cutil/oldlist.cpp \
    cutil/structures.cpp
