libtesseract_la_SOURCES += \
    dict/dawg.h \
    dict/dawg_cache.h \
    dict/dict.h \
    dict/matchdefs.h \
    dict/stopper.h \
    dict/trie.h

libtesseract_la_SOURCES += \
    dict/context.cpp \
    dict/dawg.cpp \
    dict/dawg_cache.cpp \
    dict/dict.cpp \
    dict/hyphen.cpp \
    dict/permdawg.cpp \
    dict/stopper.cpp \
    dict/trie.cpp
