include_HEADERS += \
    lstm/convolve.h \
    lstm/ctc.h \
    lstm/fullyconnected.h \
    lstm/functions.h \
    lstm/input.h \
    lstm/lstm.h \
    lstm/lstmrecognizer.h \
    lstm/lstmtrainer.h \
    lstm/maxpool.h \
    lstm/networkbuilder.h \
    lstm/network.h \
    lstm/networkio.h \
    lstm/networkscratch.h \
    lstm/parallel.h \
    lstm/plumbing.h \
    lstm/recodebeam.h \
    lstm/reconfig.h \
    lstm/reversed.h \
    lstm/series.h \
    lstm/static_shape.h \
    lstm/stridemap.h \
    lstm/tfnetwork.h \
    lstm/weightmatrix.h

libtesseract_la_SOURCES += \
    lstm/convolve.cpp \
    lstm/ctc.cpp \
    lstm/fullyconnected.cpp  \
    lstm/functions.cpp  \
    lstm/input.cpp \
    lstm/lstm.cpp  \
    lstm/lstmrecognizer.cpp  \
    lstm/lstmtrainer.cpp  \
    lstm/maxpool.cpp \
    lstm/networkbuilder.cpp  \
    lstm/network.cpp  \
    lstm/networkio.cpp \
    lstm/parallel.cpp  \
    lstm/plumbing.cpp  \
    lstm/recodebeam.cpp  \
    lstm/reconfig.cpp  \
    lstm/reversed.cpp \
    lstm/series.cpp  \
    lstm/stridemap.cpp  \
    lstm/tfnetwork.cpp  \
    lstm/weightmatrix.cpp
